--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^5.1.2",
     "@angular/router": "^5.1.2",
     "angular2-jwt": "^0.2.3",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "ng2-charts": "^1.6.0",
     "rxjs": "^5.5.2",
