--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@angular/platform-browser": "^5.1.2",
     "@angular/platform-browser-dynamic": "^5.1.2",
     "@angular/router": "^5.1.2",
+    "@types/lodash": "^4.14.92",
     "angular2-jwt": "^0.2.3",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.4",
     "ng2-charts": "^1.6.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
